--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP-Link UI UX Research</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>TP-Link Prototype Select</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
-        :root {
-            --primary: #007AFF;
-            --bg-color: #F2F5F9;
-            --card-bg: #FFFFFF;
-            --text-main: #1D1D1F;
-            --text-sub: #86868B;
-            --shadow: 0 10px 30px rgba(0,0,0,0.05);
-            --hover-shadow: 0 20px 40px rgba(0, 122, 255, 0.15);
-        }
-
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: var(--bg-color);
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            background-color: #F5F7FA;
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -28,176 +18,107 @@
             justify-content: center;
         }
 
-        /* 顶部 Logo 区域 */
-        header {
-            position: absolute;
-            top: 40px;
+        h1 {
+            color: #1D1D1F;
+            margin-bottom: 40px;
+            font-weight: 800;
             text-align: center;
         }
 
-        .logo {
-            font-family: 'Futura', sans-serif;
-            font-weight: 800;
-            font-size: 28px;
-            font-style: italic;
-            background: linear-gradient(135deg, #00C6FF, #0072FF);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 10px;
-            display: inline-block;
-        }
-
-        .subtitle {
-            color: var(--text-sub);
-            font-size: 16px;
-            font-weight: 400;
-            margin: 0;
-        }
-
-        /* 卡片容器 */
         .container {
             display: flex;
-            gap: 40px;
-            padding: 20px;
-            width: 100%;
-            max-width: 900px;
+            gap: 30px;
+            flex-wrap: wrap;
             justify-content: center;
-            flex-wrap: wrap; /* 手机端自动换行 */
+            padding: 20px;
         }
 
-        /* 方案卡片 */
-        .card-link {
-            text-decoration: none;
-            color: inherit;
-            flex: 1;
-            min-width: 300px;
-            max-width: 380px;
-        }
-
+        /* 卡片样式 */
         .card {
-            background: var(--card-bg);
-            border-radius: 24px;
-            padding: 50px 30px;
-            text-align: center;
-            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-            border: 2px solid transparent;
-            box-shadow: var(--shadow);
-            position: relative;
-            overflow: hidden;
-            height: 100%;
+            background: #fff;
+            width: 300px;
+            height: 360px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            padding: 40px 30px;
+            text-decoration: none; /* 去掉下划线 */
+            transition: transform 0.3s, box-shadow 0.3s;
+            border: 2px solid transparent;
+            position: relative;
+            overflow: hidden;
         }
 
-        /* 鼠标悬停效果 */
         .card:hover {
             transform: translateY(-8px);
-            box-shadow: var(--hover-shadow);
-            border-color: rgba(0, 122, 255, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 122, 255, 0.15);
+            border-color: #007AFF;
         }
 
-        .icon-wrapper {
+        .icon-circle {
             width: 80px;
             height: 80px;
-            background: rgba(0, 122, 255, 0.08);
-            color: var(--primary);
+            background: #F0F8FF;
+            color: #007AFF;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 32px;
             margin-bottom: 25px;
-            transition: 0.3s;
         }
 
-        .card:hover .icon-wrapper {
-            background: var(--primary);
-            color: white;
-            transform: scale(1.1);
-        }
-
-        h2 {
+        .card h2 {
             margin: 0 0 10px 0;
+            color: #1D1D1F;
             font-size: 24px;
-            color: var(--text-main);
         }
 
-        p {
-            margin: 0 0 30px 0;
-            color: var(--text-sub);
+        .card p {
+            color: #86868B;
+            text-align: center;
             font-size: 14px;
-            line-height: 1.5;
+            line-height: 1.6;
+            margin-bottom: 30px;
         }
 
         .btn {
-            padding: 12px 36px;
-            background: white;
-            border: 1px solid #ddd;
+            margin-top: auto; /* 按钮推到底部 */
+            background: #007AFF;
+            color: white;
+            padding: 12px 30px;
             border-radius: 50px;
-            color: var(--text-main);
             font-weight: 600;
             font-size: 14px;
-            transition: 0.2s;
-        }
-
-        .card:hover .btn {
-            background: var(--primary);
-            color: white;
-            border-color: var(--primary);
         }
 
         /* 移动端适配 */
         @media (max-width: 768px) {
-            body {
-                height: auto;
-                padding: 60px 0;
-            }
-            header {
-                position: static;
-                margin-bottom: 30px;
-            }
-            .container {
-                gap: 20px;
-            }
-            .card {
-                padding: 40px 20px;
-            }
+            .container { flex-direction: column; }
+            .card { width: 100%; max-width: 320px; height: auto; }
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <div class="logo">TP-Link</div>
-        <p class="subtitle">Router Web UI Interaction Testing</p>
-    </header>
+    <h1>TP-Link Web UI Prototypes</h1>
 
     <div class="container">
-        
-        <a href="https://keytolove1104.github.io/Archer-A" class="card-link" target="_blank">
-            <div class="card">
-                <div class="icon-wrapper">
-                    <i class="fas fa-sitemap"></i>
-                </div>
-                <h2>Proposal A</h2>
-                <p>Top navigation hierarchy focused on<br>clear categorization.</p>
-                <div class="btn">View Demo A</div>
-            </div>
+        <a href="a.html" class="card">
+            <div class="icon-circle"><i class="fas fa-layer-group"></i></div>
+            <h2>Scheme A</h2>
+            <p><strong>经典层级结构</strong><br>适合桌面端操作，层级清晰，符合传统路由管理习惯。</p>
+            <span class="btn">点击体验 A 方案</span>
         </a>
 
-        <a href="https://keytolove1104.github.io/Archer-B" class="card-link" target="_blank">
-            <div class="card">
-                <div class="icon-wrapper">
-                    <i class="fas fa-mobile-screen-button"></i>
-                </div>
-                <h2>Proposal B</h2>
-                <p>Sidebar navigation & glassmorphism<br>design (Mobile First).</p>
-                <div class="btn">View Demo B</div>
-            </div>
+        <a href="b.html" class="card">
+            <div class="icon-circle"><i class="fas fa-mobile-alt"></i></div>
+            <h2>Scheme B</h2>
+            <p><strong>移动端优先 / 磨砂质感</strong><br>现代化设计风格，自适应布局，适合手机和触屏设备。</p>
+            <span class="btn">点击体验 B 方案</span>
         </a>
-
     </div>
 
 </body>
