--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
         <a href="a.html" class="card">
             <div class="icon-circle"><i class="fas fa-layer-group"></i></div>
             <h2>Scheme A</h2>
-            <p><strong>经典层级结构</strong><br>适合桌面端操作，层级清晰，符合传统路由管理习惯。</p>
+            <p><strong>T型结构</strong><br> 信息层级清晰。</p>
             <span class="btn">点击体验 A 方案</span>
         </a>
 
         <a href="b.html" class="card">
             <div class="icon-circle"><i class="fas fa-mobile-alt"></i></div>
             <h2>Scheme B</h2>
-            <p><strong>移动端优先 / 磨砂质感</strong><br>现代化设计风格，自适应布局，适合手机和触屏设备。</p>
+            <p><strong> 单侧边栏 </strong><br> 简洁统一，视觉中心集中。</p>
             <span class="btn">点击体验 B 方案</span>
         </a>
     </div>
