--- a/a.html
+++ b/a.html
@@ -82,6 +82,7 @@
             overflow-x: auto; /* 允许横向滚动 */
             scrollbar-width: none; /* Firefox 隐藏滚动条 */
             -ms-overflow-style: none; /* IE/Edge 隐藏滚动条 */
+            margin-right: 20px; /* 增加右侧间距，防止贴着搜索框 */
         }
         .l1-nav-bar::-webkit-scrollbar { display: none; /* Chrome 隐藏滚动条 */ }
 
@@ -106,6 +107,47 @@
         .icon-top-teal { color: var(--icon-teal); }
         .icon-top-orange { color: var(--icon-orange); }
         .icon-top-red { color: var(--icon-red); }
+
+        /* ========== NEW: 搜索框样式 ========== */
+        .search-box-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+        }
+
+        .search-input {
+            width: 220px;
+            height: 36px;
+            padding: 0 15px 0 36px; /* 左边留出图标位置 */
+            border-radius: 18px;
+            border: none;
+            background-color: #F0F2F5; /* 浅灰色背景，与白色header形成对比 */
+            color: var(--text-main);
+            font-size: 14px;
+            outline: none;
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        }
+
+        /* 搜索输入框 Placeholder 颜色 */
+        .search-input::placeholder {
+            color: #999;
+        }
+
+        /* 聚焦状态 */
+        .search-input:focus {
+            background-color: #fff;
+            width: 260px; /* 聚焦时稍微变宽 */
+            box-shadow: 0 0 0 2px rgba(0, 122, 255, 0.2); /* 蓝色微光 */
+        }
+
+        .search-icon-inside {
+            position: absolute;
+            left: 12px;
+            font-size: 14px;
+            color: #999;
+            pointer-events: none; /* 让点击穿透到 input */
+        }
 
         /* ==================== 3. 主容器与动态侧边栏 ==================== */
         .container { display: flex; flex: 1; overflow: hidden; position: relative; }
@@ -231,10 +273,15 @@
         @media (max-width: 768px) {
             /* 1. 顶部栏适配 */
             .header { padding: 0 15px; height: 56px; }
-            .l1-nav-bar { margin-left: 10px; gap: 0; }
+            .l1-nav-bar { margin-left: 10px; gap: 0; margin-right: 10px; }
             .nav-l1-top { padding: 5px 10px; font-size: 14px; }
             /* 隐藏顶部导航的图标以节省空间 (可选) */
             /* .nav-l1-top i { display: none; } */
+            
+            /* 手机端搜索框适配：变窄 */
+            .search-input { width: 120px; height: 32px; font-size: 13px; }
+            .search-input:focus { width: 160px; position: absolute; right: 0; z-index: 10; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+            .search-box-wrapper { margin-right: 10px; }
 
             /* 2. 侧边栏适配 (Overlay 模式) */
             .sidebar-wrapper {
@@ -298,7 +345,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay" onclick="closeSidebar()"></div>
 
     <header class="header">
-        <div style="display: flex; align-items: center; flex: 1; overflow: hidden;">
+        <div style="display: flex; align-items: center; flex: 1; overflow: hidden; min-width: 0;">
             <div class="logo">TP-Link</div>
             
             <div class="l1-nav-bar" id="l1-nav">
@@ -319,6 +366,11 @@
                     <i class="fas fa-sliders-h icon-top-red"></i>Advanced
                 </div>
             </div>
+        </div>
+
+        <div class="search-box-wrapper">
+            <i class="fas fa-search search-icon-inside"></i>
+            <input type="text" class="search-input" placeholder="Search settings...">
         </div>
 
         <div class="header-icons">
