--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archer web 2.0 Preference Test</title>
+    <title>Archer Web 2.0 Preference Test</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
@@ -157,7 +157,7 @@
 <body>
 
     <div id="selection-screen">
-        <h1>Router UI / UX Design Test</h1>
+        <h1>Archer Web 2.0 Preference Test</h1>
         
         <div class="cards-container">
             <a href="a.html" class="card" onclick="openScheme(event, 'a.html')">
