--- a/b.html
+++ b/b.html
@@ -359,7 +359,7 @@
         <div class="header-search">
             <div class="search-wrapper">
                 <i class="fas fa-search search-icon-input"></i>
-                <input type="text" class="search-input" placeholder="Too many features? Just search.">
+                <input type="text" class="search-input" placeholder="Looking for features?">
             </div>
         </div>
 
