--- a/a.html
+++ b/a.html
@@ -395,7 +395,7 @@
 
         <div class="search-box-wrapper">
             <i class="fas fa-search search-icon-inside"></i>
-            <input type="text" class="search-input" placeholder="Too many features? Just search.">
+            <input type="text" class="search-input" placeholder="Looking for features?">
         </div>
 
         <div class="header-icons">
