--- a/index.html
+++ b/index.html
@@ -164,20 +164,20 @@
                 <div class="icon-circle"><i class="fas fa-sitemap"></i></div>
                 <h2>Scheme A</h2>
                 <p>
-                    <strong>T型结构</strong><br>
-                    信息层级清晰
+                    <strong>T-shaped structure</strong><br>
+                    Clear in hierarchy
                 </p>
-                <span class="btn">点击体验 A 方案</span>
+                <span class="btn">Click to experience Scheme A</span>
             </a>
 
             <a href="b.html" class="card" onclick="openScheme(event, 'b.html')">
                 <div class="icon-circle"><i class="fas fa-table-columns"></i></div>
                 <h2>Scheme B</h2>
                 <p>
-                    <strong>单侧边栏</strong><br>
-                    简洁统一，视觉聚焦
+                    <strong>Single sidebar</strong><br>
+                    Simple, unified, and visually focused
                 </p>
-                <span class="btn">点击体验 B 方案</span>
+                <span class="btn">Click to experience Scheme B</span>
             </a>
         </div>
     </div>
